Fix topbar on mobile

--- a/apps/web/public/assets/css/layout.css
+++ b/apps/web/public/assets/css/layout.css
@@ -419,3 +419,11 @@ body {
         font-size: 18px;
     }
 }
+
+@media (max-width: 900px) {
+    #topbar {
+        flex-direction: column;
+        gap: 8px;
+        justify-content: center;
+    }
+}
